# MPE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  linux_batch.sh  main.cpp
assets/: mpeprops.txt
assets/Resources/Shaders/: blinn-phong.frag  blinn-phong.vert  common.glsl  phong.frag  phong.vert  shadows.frag  shadows.geom  shadows.vert  unlit.frag  unlit.vert
ext/glad/include/glad/: gl.h
include/MPE/Core/: Identifier.hpp  Input.hpp  Log.hpp  Logger.hpp  Properties.hpp  ThreadPool.hpp  Time.hpp  Transform.hpp  Utils.hpp  Window.hpp
include/MPE/DataStructures/: SparseSet.hpp
include/MPE/ECS/: ComponentBuffer.hpp  Entity.hpp  SystemBucket.hpp  World.hpp
include/MPE/Graphics/: Camera.hpp  GraphicsBuffers.hpp  GraphicsDefines.hpp  Material.hpp  Mesh.hpp  PointLight.hpp  RenderBatch.hpp  RenderGroup.hpp  RenderMapper.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  Vertex.hpp  VertexIndex.hpp
include/MPE/Graphics/DataTransfer/: GPUCameraData.hpp  GPULightData.hpp  GPUPerFrameData.hpp  GPUPerMeshData.hpp  GPUPointLight.hpp
include/MPE/Importers/: OBJLoader.hpp
include/MPE/Maths/: Mat4f.hpp  MathsDefines.hpp  Quaternion.hpp  Vec2f.hpp  Vec3.hpp  Vec3f.hpp  Vec4f.hpp
include/MPE/Utils/: DataOriented.hpp  IO.hpp
src/: Camera.cpp  GPUCameraData.cpp  GPULightData.cpp  GPUPointLight.cpp  GraphicsBuffers.cpp  IO.cpp  Input.cpp  Logger.cpp  Mat4f.cpp  Material.cpp  OBJLoader.cpp  Properties.cpp  Quaternion.cpp  RenderBatch.cpp  RenderGroup.cpp  RenderMapper.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  ThreadPool.cpp  Time.cpp  Vec2f.cpp  Vec3f.cpp  Vec4f.cpp  Window.cpp  World.cpp  main.cpp
